<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OrbbecSDKExamples</string>
    <string name="title_activity_sensor_control_welcome">SensorControlWelcomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="device_info"><xliff:g>%s</xliff:g>\n
        Name:<xliff:g>%s</xliff:g>\n
        SN:<xliff:g>%s</xliff:g>\n
        PID:<xliff:g>%s</xliff:g>\n
        VID:<xliff:g>%s</xliff:g></string>

    <string name="notification">Run Information See Log.</string>
    <string name="depth_mode">Depth work mode</string>
    <string name="sensor">Sensor Type</string>
    <string name="start_play">Start Play</string>
    <string name="stop_play">Stop Play</string>
    <string name="device_name">Device name</string>

    <string name="device_not_connected">No device connected !</string>
    <string name="device_not_support_depth_mode">Current device is not support DepthWorkMode</string>
    <string name="device_not_support_color">This device does not support Color sensor</string>
    <string name="device_not_support_ir">This device does not support IR sensor</string>
    <string name="device_not_support_ir_left">This device does not support IR Left sensor</string>
    <string name="device_not_support_ir_right">This device does not support IR Right sensor</string>
    <string name="device_not_support_depth">This device does not support Depth sensor</string>
    <string name="device_not_support_imu">This device does not support IMU</string>
    <string name="device_not_support_hdr">This device does not support HDR</string>
    <string name="device_not_support_align_filter">This device does not support align filter</string>
    <string name="device_not_support_post_process">This device does not support post processing</string>
    <string name="init_stream_profile_failed">Initialize StreamProfile failed</string>
    <string name="please_access_device">Please access the device</string>
    <string name="sensor_control_select_device">Select device: </string>
    <string name="sensor_control_select_command">Select command: </string>
    <string name="sensor_control_operate_log">Operate log: </string>
    <string name="sensor_control_firmware_version">Firmware version: </string>
    <string name="sensor_control_hardware_version">Hardware version: </string>
    <string name="sensor_control_sdk_version">Android SDK version: </string>
    <string name="sensor_control_serial_number">Serial Number: </string>
    <string name="sensor_control_read_write_permission"> Permission：</string>
    <string name="device_list_is_empty">Device list is empty</string>
    <string name="command_list_is_empty">Command list is empty</string>
    <string name="please_input_right_value">Please follow the prompts to enter the correct value</string>
    <string name="cannot_set_exposure_and_gain_when_ae_on">Auto exposure is not turned off and exposure or gain cannot be set</string>
    <string name="cannot_set_brightness_when_ae_off">The automatic exposure is not turned on, and the brightness cannot be set</string>
    <string name="cannot_set_white_balance_when_auto_white_balance_on">Auto white balance is not turned off and white balance cannot be set</string>
    <string name="save_to_disk_save_path">SavePath: </string>
    <string name="firmware_upgrade_success">Firmware upgrade success!</string>
    <string name="firmware_upgrade_failed">Firmware upgrade failed!</string>
    <string name="firmware_is_latest_version">The firmware is the latest version!</string>
    <string name="not_find_firmware_file">Firmware file not found!</string>
    <string name="no_file_select">Currently no file selected!</string>
    <string name="directory_error">The selected directory is abnormal!</string>
    <string name="depth_distance">Depth Distance：<xliff:g>%.1f</xliff:g> mm</string>
    <string name="device_status">Device connection status</string>
    <string name="device_reboot">Reboot Device(S)</string>
    <string name="set">Set</string>
    <string name="get">Get</string>
    <string name="save_depth_points">Save Depth Points</string>
    <string name="save_color_points">Save Color Points</string>

    <string name="color_stream">Color Stream</string>
    <string name="depth_stream">Depth Stream</string>
    <string name="ir_stream">IR Stream</string>
    <string name="ir_left_stream">IR Left Stream</string>
    <string name="ir_right_stream">IR Right Stream</string>
    <string name="post_processing_depth_stream">Post Processing Depth Stream</string>
    <string name="save_image">The image is being saved</string>
</resources>