<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StreamMultiStreamsActivity">

    <LinearLayout
        android:id="@+id/ll_color_accel_gyro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <com.orbbec.orbbecsdkexamples.view.OBGLView
                android:id="@+id/multi_stream_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#80000000"
                android:gravity="start|top"
                android:text="@string/color_stream"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/multi_stream_accel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/multi_stream_accel_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_accel_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_accel_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_accel_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_accel_z"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/multi_stream_gyro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/multi_stream_gyro_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_gyro_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_gyro_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_gyro_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />

            <TextView
                android:id="@+id/multi_stream_gyro_z"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/imu_text_size" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/ll_depth_ir_left_right"
        app:layout_constraintTop_toBottomOf="@+id/ll_color_accel_gyro" />

    <LinearLayout
        android:id="@+id/ll_depth_ir_left_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <com.orbbec.orbbecsdkexamples.view.OBGLView
                android:id="@+id/multi_stream_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#80000000"
                android:gravity="start|top"
                android:text="@string/depth_stream"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_multi_stream_ir_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="gone">

            <com.orbbec.orbbecsdkexamples.view.OBGLView
                android:id="@+id/multi_stream_ir_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#80000000"
                android:gravity="start|top"
                android:text="@string/ir_left_stream"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_multi_stream_ir_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="gone">

            <com.orbbec.orbbecsdkexamples.view.OBGLView
                android:id="@+id/multi_stream_ir_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#80000000"
                android:gravity="start|top"
                android:text="@string/ir_right_stream"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_multi_stream_ir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="gone">

            <com.orbbec.orbbecsdkexamples.view.OBGLView
                android:id="@+id/multi_stream_ir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#80000000"
                android:gravity="start|top"
                android:text="@string/ir_stream"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>